--- a/system/views/argument/signup.html
+++ b/system/views/argument/signup.html
@@ -140,8 +140,8 @@
                                     <i class="fa fa-key"></i>
                                 </span>
                                 <div class="form-group label-floating">
-                                    <label class="control-label">Account</label>
-                                    <input type="text" name='u_account' class="form-control" />
+                                    <label class="control-label">Teacher (not must)</label>
+                                    <input type="text" name='parent_id' class="form-control" />
                                 </div>
                             </div>
                         </div>
