--- a/system/views/argument/SendTesterToChatroom.html
+++ b/system/views/argument/SendTesterToChatroom.html
@@ -260,7 +260,7 @@ function SendtoRoom() {
 }
 </script>
 <script type="text/javascript">
-$.get("./user",
+$.get("./user/subuser",
     function(data, status) {
         user_list = JSON.parse(data);
         console.log(user_list['text']);
