--- a/system/views/argument/sittingPage.html
+++ b/system/views/argument/sittingPage.html
@@ -117,7 +117,7 @@
 											<li>
 												<a href="#chatroom" data-toggle="tab">
 													<i class="material-icons">chat</i>
-													設定活動聊天室/活動學生
+													設定活動學生
 												</a>
 											</li>
 											<li>
@@ -141,25 +141,25 @@
 							<div class="content">
 								<div class="tab-content text-center">
 									<div class="tab-pane active" id="new">
-										<p> I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. </p>
+										<p> 這是舉辦活動的第一個步驟，唯有在已經建立活動後才能繼續之後的步驟。<small>如果還沒有新增過任何論證主題的話，請先移置到新增題目。</small></p>
                                         <div class="col-md-8 col-md-offset-2">
 							                <button class="btn btn-primary" onclick="javascript:location.href='./newactivity'">建立活動</button>
                                         </div>
                                     </div>
 									<div class="tab-pane" id="chatroom">
-										<p> I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.</p>
+										<p>這邊你可找到屬於你的所有學生，並從中挑取加入你的活動。</p>
 									    <div class="col-md-8 col-md-offset-2">
-							                <button class="btn btn-primary" onclick="javascript:location.href='./newTester'">設定活動聊天室/活動學生</button>
+							                <button class="btn btn-primary" onclick="javascript:location.href='./newTester'">設定活動學生</button>
                                         </div>
                                     </div>
 									<div class="tab-pane" id="tester">
-										<p>I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. So when you get something that has the name Kanye West on it, it’s supposed to be pushing the furthest possibilities. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus.</p>
+										<p>最後你可以將參與活動的學生進行分組，同組的同學會在進入活動的同時，直接移置到同個房間。</p>
 									<div class="col-md-8 col-md-offset-2">
 							                <button class="btn btn-primary" onclick="javascript:location.href='./SendTesterToChatroom'">安排活動學生進聊天室</button>
                                     </div>
                                     </div>
                                     <div class="tab-pane" id="topic">
-										<p>I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. So when you get something that has the name Kanye West on it, it’s supposed to be pushing the furthest possibilities. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus.</p>
+										<p>新增論證題目，這些題目可以重複使用(舉辦多場活動)，但每次活動主題只能從中選一。</p>
 									<div class="col-md-8 col-md-offset-2">
 							                <button class="btn btn-primary" onclick="javascript:location.href='./newTopic'">新增題目</button>
                                         </div>
