--- a/system/views/argument/signup.html
+++ b/system/views/argument/signup.html
@@ -145,7 +145,33 @@
                                 </div>
                             </div>
                         </div>
-                        <!--/ Input 3 : User account-->		
+                        <!--/ Input 3 : User account-->
+                        <!--Input 4 : User account-->
+                        <div class="col-sm-8">
+                            <div class="input-group">
+                                <span class="input-group-addon">
+                                    <i class="fa fa-key"></i>
+                                </span>
+                                <div class="form-group label-floating">
+                                    <label class="control-label">mail</label>
+                                    <input type="text" name='mail' class="form-control" />
+                                </div>
+                            </div>
+                        </div>
+                        <!--/ Input 4 : User account-->
+                        <!--Input 5 : User account-->
+                        <div class="col-sm-8">
+                            <div class="input-group">
+                                <span class="input-group-addon">
+                                    <i class="fa fa-key"></i>
+                                </span>
+                                <div class="form-group label-floating">
+                                    <label class="control-label">pws</label>
+                                    <input type="text" name='pws' class="form-control" />
+                                </div>
+                            </div>
+                        </div>
+                        <!--/ Input 5 : User account-->		
                     <!-- summit button-->
                     <div class="col-sm-12">
                         <input  type="submit" class="btn btn-primary" value="註冊"></input>
