make process that login to the chatroom to reset

--- a/system/views/argument/login.html
+++ b/system/views/argument/login.html
@@ -110,11 +110,11 @@
                         <div class="col-sm-6">
 					        <div class="input-group">
 						        <span class="input-group-addon">
-							        <i class="fa fa-user"></i>
+							        <i class="fa fa-envelope-o"></i>
 						        </span>
 						        <div class="form-group label-floating">
-	                                <label class="control-label">User ID</label>
-	                                <input type="text" name='u_id' class="form-control" />
+	                                <label class="control-label">mail</label>
+	                                <input type="text" name='mail' class="form-control" />
                                 </div>
 					        </div>
 				        </div>
