--- a/system/views/argument/ChatroomPage2.html
+++ b/system/views/argument/ChatroomPage2.html
@@ -179,11 +179,12 @@
                                         </div>
                                     </div>
                                     <div class="title">
-                                        <h4 style="text-align: left;">
-                                              <%=title%><%=room%>/使用者名稱：<%=UserName%><br> 題目：<br>
+                                            <h4 id="info" style="text-align: left;">
+                                              <%=title%><%=room%>
                                             </h4>
-                                        <blockquote>
-                                            <p class="text-left">
+                                             <p style="text-align: left;"><br> 題目：<br></p>
+                                        <blockquote>                           
+                                            <p id='Topic_content' class="text-left">
                                                 <%=t_con%>
                                             </p>
                                         </blockquote>
@@ -315,6 +316,7 @@ function SendActionToSql(Sentcontent, ad) {
 <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
 <script src="assets/js/material-kit.js" type="text/javascript"></script>
 <script type="text/javascript">
+$('#info').append('<p>使用者名稱: <%=UserName%></p>');
 $().ready(function() {
     // the body of this function is in assets/materiial-kit.js
     materialKit.initSliders();
