--- a/system/views/argument/signup.html
+++ b/system/views/argument/signup.html
@@ -1,113 +1,128 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-	<meta charset="utf-8" />
-	<link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
-	<link rel="icon" type="image/png" href="assets/img/favicon.png">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-
-	<title>Material Kit by Creative Tim</title>
-
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-
-	<!--     Fonts and icons     -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <meta charset="utf-8" />
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
+    <link rel="icon" type="image/png" href="assets/img/favicon.png">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <title>Material Kit by Creative Tim</title>
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <!--     Fonts and icons     -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
-
-	<!-- CSS Files -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
+    <!-- CSS Files -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/material-kit.css" rel="stylesheet"/>
-
-	<!-- CSS Just for demo purpose, don't include it in your project -->
-	<link href="assets/css/demo.css" rel="stylesheet" />
-
+    <link href="assets/css/material-kit.css" rel="stylesheet" />
+    <!-- CSS Just for demo purpose, don't include it in your project -->
+    <link href="assets/css/demo.css" rel="stylesheet" />
 </head>
 
 <body class="index-page">
-<!-- Navbar -->
+    <!-- Navbar -->
     <nav class="navbar navbar-transparent navbar-fixed-top navbar-color-on-scroll">
-	    <div class="container">
+        <div class="container">
             <div class="navbar-header">
-	        	<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-index">
-	            	<span class="sr-only">Toggle navigation</span>
-	            	<span class="icon-bar"></span>
-	            	<span class="icon-bar"></span>
-	            	<span class="icon-bar"></span>
-	        	</button>
-				<a href="./login">
-	            	<div class="logo-container">
-	                    <div class="logo">
-	                        <img src="assets/img/logo.png" alt="site Logo" rel="tooltip" title="logo" data-placement="bottom" data-html="true">
-	                    </div>
-	                    <div class="brand">
-                            Argument Sys 
-	                    </div>
-
-
-				    </div>
-	          	</a>
-	        </div>
-
-	        <div class="collapse navbar-collapse" id="navigation-index">
-	        	<ul class="nav navbar-nav navbar-right">
-				    <li>
-					    <a href="./signup">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-index">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a href="./login">
+                    <div class="logo-container">
+                        <div class="logo">
+                            <img src="assets/img/logo.png" alt="site Logo" rel="tooltip" title="logo" data-placement="bottom" data-html="true">
+                        </div>
+                        <div class="brand">
+                            Argument Sys
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="collapse navbar-collapse" id="navigation-index">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="./signup">
 						    <i class="material-icons">person_add</i> Sign up
-					    </a><!--https://material.io/icons/-->
-				    </li>
-				    <li>
-					    <a href="./login">
+					    </a>
+                        <!--https://material.io/icons/-->
+                    </li>
+                    <li>
+                        <a href="./login">
 						    <i class="material-icons">chat</i> Enter activity
 					    </a>
-				    </li>
-				    <li>
-					    <a rel="tooltip" title="About ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
+                    </li>
+                    <li>
+                        <a rel="tooltip" title="About ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
 						    <i class="fa fa-info-circle"></i><!--http://fontawesome.io/icons/-->
 					    </a>
-				    </li>
-				    <li>
-					    <a rel="tooltip" title="Contact ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
+                    </li>
+                    <li>
+                        <a rel="tooltip" title="Contact ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
 						    <i class="fa fa-question-circle"></i>
 					    </a>
-				    </li>
-				    <li>
-					    <a rel="tooltip" title="Setting" data-placement="bottom" href="./sitting_login" class="btn btn-white btn-simple btn-just-icon">
+                    </li>
+                    <li>
+                        <a rel="tooltip" title="Setting" data-placement="bottom" href="./sitting_login" class="btn btn-white btn-simple btn-just-icon">
 						    <i class="fa fa-cog"></i>
 					    </a>
-				    </li>
-
-	        	</ul>
-	        </div>
-	    </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </nav>
-<!-- End Navbar -->
-
-<div class="wrapper">
-	<div class="header header-filter" style="background-image: url('assets/img/bg2.jpeg');">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2">
-					<div class="brand">
-						<h1>Argument System.</h1>
-						<h3>argument platflom for student.</h3>
-					</div>
-				</div>
-			</div>
-
-		</div>
-	</div>
-
-	<div class="main main-raised">
-		<div class="section section-basic">
-            
-	    	<div class="container">
-                <form action="./user" method="post">
+    <!-- End Navbar -->
+    <div class="wrapper">
+        <div class="header header-filter" style="background-image: url('assets/img/bg2.jpeg');">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <div class="brand">
+                            <h1>Argument System.</h1>
+                            <h3>argument platflom for student.</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main main-raised">
+            <div class="section section-basic">
+                <div class="container">
+                    <form action="./user" method="post">
                         <div class="title">
-	                        <h2>填寫註冊資料</h2>
-	                    </div>
+                            <h2>填寫註冊資料</h2>
+                        </div>
+                        <!--Input 4 : mail-->
+                        <div class="col-sm-6">
+                            <div class="input-group">
+                                <span class="input-group-addon">
+                                    <i class="fa fa-envelope-o"></i>
+                                </span>
+                                <div class="form-group label-floating">
+                                    <label class="control-label">mail</label>
+                                    <input type="text" name='mail' class="form-control" />
+                                </div>
+                            </div>
+                        </div>
+                        <!--/ Input 4 : mail-->
+                        <!--Input 5 : pws-->
+                        <div class="col-sm-6">
+                            <div class="input-group">
+                                <span class="input-group-addon">
+                                    <i class="fa fa-key"></i>
+                                </span>
+                                <div class="form-group label-floating">
+                                    <label class="control-label">passwords</label>
+                                    <input type="text" name='pws' class="form-control" />
+                                </div>
+                            </div>
+                        </div>
+                        <!--/ Input 5 : pws-->
+                        </hr>
                         <!--Input 1 : User name-->
-                        <div class="col-sm-8">
+                        <div class="col-sm-6">
                             <div class="input-group">
                                 <span class="input-group-addon">
                                     <i class="fa fa-id-card"></i>
@@ -118,10 +133,9 @@
                                 </div>
                             </div>
                         </div>
-                        <!--/ Input 1 : User name-->	
-
+                        <!--/ Input 1 : User name-->
                         <!--Input 2 : school-->
-                        <div class="col-sm-8">
+                        <div class="col-sm-6">
                             <div class="input-group">
                                 <span class="input-group-addon">
                                     <i class="fa fa-tag"></i>
@@ -133,11 +147,11 @@
                             </div>
                         </div>
                         <!--/ Input 2 : school -->
-                        <!--Input 3 : User account-->
-                        <div class="col-sm-8">
+                        <!--Input 3 : teacher-->
+                        <div class="col-sm-6">
                             <div class="input-group">
                                 <span class="input-group-addon">
-                                    <i class="fa fa-key"></i>
+                                    <i class="fa fa-user-circle-o"></i>
                                 </span>
                                 <div class="form-group label-floating">
                                     <label class="control-label">Teacher (not must)</label>
@@ -145,110 +159,72 @@
                                 </div>
                             </div>
                         </div>
-                        <!--/ Input 3 : User account-->
-                        <!--Input 4 : User account-->
-                        <div class="col-sm-8">
-                            <div class="input-group">
-                                <span class="input-group-addon">
-                                    <i class="fa fa-key"></i>
-                                </span>
-                                <div class="form-group label-floating">
-                                    <label class="control-label">mail</label>
-                                    <input type="text" name='mail' class="form-control" />
-                                </div>
-                            </div>
+                        <!--/ Input 3 : teacher-->
+                        <!-- summit button-->
+                        <div class="col-sm-12">
+                            <input type="submit" class="btn btn-primary" value="註冊"></input>
                         </div>
-                        <!--/ Input 4 : User account-->
-                        <!--Input 5 : User account-->
-                        <div class="col-sm-8">
-                            <div class="input-group">
-                                <span class="input-group-addon">
-                                    <i class="fa fa-key"></i>
-                                </span>
-                                <div class="form-group label-floating">
-                                    <label class="control-label">pws</label>
-                                    <input type="text" name='pws' class="form-control" />
-                                </div>
-                            </div>
-                        </div>
-                        <!--/ Input 5 : User account-->		
-                    <!-- summit button-->
-                    <div class="col-sm-12">
-                        <input  type="submit" class="btn btn-primary" value="註冊"></input>
-                    </div>
-                    <!--/ summit button-->
-		        </form>
-
-
-	    	</div>
-
-		
-
-	    </div>
-	 </div>
-
-     <footer class="footer">
-	    <div class="container">
-	        <nav class="pull-left">
-	            <ul>
-					<li>
-						<a href="#">
+                        <!--/ summit button-->
+                    </form>
+                </div>
+            </div>
+        </div>
+        <footer class="footer">
+            <div class="container">
+                <nav class="pull-left">
+                    <ul>
+                        <li>
+                            <a href="#">
 							Home
 						</a>
-					</li>
-					<li>
-						<a href="#">
+                        </li>
+                        <li>
+                            <a href="#">
 						   About Us
 						</a>
-					</li>
-					<li>
-						<a href="#">
+                        </li>
+                        <li>
+                            <a href="#">
 						   Blog
 						</a>
-					</li>
-					<li>
-						<a href="#">
+                        </li>
+                        <li>
+                            <a href="#">
 							Licenses
 						</a>
-					</li>
-	            </ul>
-	        </nav>
-	        <div class="copyright pull-right">
-	            &copy; 2018, made with <i class="fa fa-terminal"></i> Nodejs by Theta for argument system in WuRET.
-	        </div>
-	    </div>
-	 </footer>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="copyright pull-right">
+                    &copy; 2018, made with <i class="fa fa-terminal"></i> Nodejs by Theta for argument system in WuRET.
+                </div>
+            </div>
+        </footer>
     </div>
-
-    
 </body>
-	<!--   Core JS Files   -->
-	<script src="assets/js/jquery.min.js" type="text/javascript"></script>
-	<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="assets/js/material.min.js"></script>
+<!--   Core JS Files   -->
+<script src="assets/js/jquery.min.js" type="text/javascript"></script>
+<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="assets/js/material.min.js"></script>
+<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
+<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
+<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
+<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
+<script src="assets/js/material-kit.js" type="text/javascript"></script>
+<script type="text/javascript">
+$().ready(function() {
+    // the body of this function is in assets/material-kit.js
+    materialKit.initSliders();
+    window_width = $(window).width();
 
-	<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-	<script src="assets/js/nouislider.min.js" type="text/javascript"></script>
+    if (window_width >= 992) {
+        big_image = $('.wrapper > .header');
 
-	<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-	<script src="assets/js/bootstrap-datepicker.js" type="text/javascript"></script>
+        $(window).on('scroll', materialKitDemo.checkScrollForParallax);
+    }
 
-	<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-	<script src="assets/js/material-kit.js" type="text/javascript"></script>
+});
+</script>
 
-	<script type="text/javascript">
-
-		$().ready(function(){
-			// the body of this function is in assets/material-kit.js
-			materialKit.initSliders();
-            window_width = $(window).width();
-
-            if (window_width >= 992){
-                big_image = $('.wrapper > .header');
-
-				$(window).on('scroll', materialKitDemo.checkScrollForParallax);
-			}
-
-		});
-	</script>
 </html>
