--- a/system/views/argument/signup.html
+++ b/system/views/argument/signup.html
@@ -45,29 +45,29 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="./signup">
-						    <i class="material-icons">person_add</i> Sign up
-					    </a>
+                            <i class="material-icons">person_add</i> Sign up
+                        </a>
                         <!--https://material.io/icons/-->
                     </li>
                     <li>
                         <a href="./login">
-						    <i class="material-icons">chat</i> Enter activity
-					    </a>
+                            <i class="material-icons">chat</i> Enter activity
+                        </a>
                     </li>
                     <li>
                         <a rel="tooltip" title="About ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
-						    <i class="fa fa-info-circle"></i><!--http://fontawesome.io/icons/-->
-					    </a>
+                            <i class="fa fa-info-circle"></i><!--http://fontawesome.io/icons/-->
+                        </a>
                     </li>
                     <li>
                         <a rel="tooltip" title="Contact ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
-						    <i class="fa fa-question-circle"></i>
-					    </a>
+                            <i class="fa fa-question-circle"></i>
+                        </a>
                     </li>
                     <li>
                         <a rel="tooltip" title="Setting" data-placement="bottom" href="./sitting_login" class="btn btn-white btn-simple btn-just-icon">
-						    <i class="fa fa-cog"></i>
-					    </a>
+                            <i class="fa fa-cog"></i>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -94,7 +94,7 @@
                         <div class="title">
                             <h2>填寫註冊資料</h2>
                         </div>
-                        <!--Input 4 : mail-->
+                        <!--Input  : mail-->
                         <div class="col-sm-6">
                             <div class="input-group">
                                 <span class="input-group-addon">
@@ -106,8 +106,8 @@
                                 </div>
                             </div>
                         </div>
-                        <!--/ Input 4 : mail-->
-                        <!--Input 5 : pws-->
+                        <!--/ Input  : mail-->
+                        <!--Input  : pws-->
                         <div class="col-sm-6">
                             <div class="input-group">
                                 <span class="input-group-addon">
@@ -119,9 +119,9 @@
                                 </div>
                             </div>
                         </div>
-                        <!--/ Input 5 : pws-->
+                        <!--/ Input  : pws-->
                         </hr>
-                        <!--Input 1 : User name-->
+                        <!--Input  : User name-->
                         <div class="col-sm-6">
                             <div class="input-group">
                                 <span class="input-group-addon">
@@ -133,8 +133,8 @@
                                 </div>
                             </div>
                         </div>
-                        <!--/ Input 1 : User name-->
-                        <!--Input 2 : school-->
+                        <!--/ Input  : User name-->
+                        <!--Input  : school-->
                         <div class="col-sm-6">
                             <div class="input-group">
                                 <span class="input-group-addon">
@@ -146,20 +146,35 @@
                                 </div>
                             </div>
                         </div>
-                        <!--/ Input 2 : school -->
-                        <!--Input 3 : teacher-->
+                        <!--/ Input  : school -->
+                        <!--Input  : birthday-->
                         <div class="col-sm-6">
                             <div class="input-group">
                                 <span class="input-group-addon">
                                     <i class="fa fa-user-circle-o"></i>
                                 </span>
                                 <div class="form-group label-floating">
-                                    <label class="control-label">Teacher (not must)</label>
-                                    <input type="text" name='parent_id' class="form-control" />
+                                    <label class="control-label">birthday</label>
+                                    <input type="text" id="datepicker" name="u_birthday" class="datepicker form-control" value="2018-01-11" />
                                 </div>
                             </div>
                         </div>
-                        <!--/ Input 3 : teacher-->
+                        <!--/ Input  : birthday -->
+                        <!--Input  : teacher-->
+                        <div class="col-sm-6">
+                            <div class="input-group">
+                                <span class="input-group-addon">
+                                    <i class="fa fa-user-circle-o"></i>
+                                </span>
+                                <div class="form-group label-floating">
+                                    <label class="control-label">Teacher mail (not must)</label>
+                                    <input type="text" name='parent_mail' class="form-control" />
+                                </div>
+                            </div>
+                        </div>
+                        <!--/ Input  : teacher -->
+                        
+                        
                         <!-- summit button-->
                         <div class="col-sm-12">
                             <input type="submit" class="btn btn-primary" value="註冊"></input>
@@ -175,23 +190,23 @@
                     <ul>
                         <li>
                             <a href="#">
-							Home
-						</a>
+                            Home
+                        </a>
                         </li>
                         <li>
                             <a href="#">
-						   About Us
-						</a>
+                           About Us
+                        </a>
                         </li>
                         <li>
                             <a href="#">
-						   Blog
-						</a>
+                           Blog
+                        </a>
                         </li>
                         <li>
                             <a href="#">
-							Licenses
-						</a>
+                            Licenses
+                        </a>
                         </li>
                     </ul>
                 </nav>
