--- a/system/views/argument/ChatroomPage2.html
+++ b/system/views/argument/ChatroomPage2.html
@@ -179,11 +179,14 @@
                                         </div>
                                     </div>
                                     <div class="title">
-                                            <h4 id="info" style="text-align: left;">
+                                        <h4 id="info" style="text-align: left;">
                                               <%=title%><%=room%>
                                             </h4>
-                                             <p style="text-align: left;"><br> 題目：<br></p>
-                                        <blockquote>                           
+                                        <p style="text-align: left;">
+                                            <br> 題目：
+                                            <br>
+                                        </p>
+                                        <blockquote>
                                             <p id='Topic_content' class="text-left">
                                                 <%=t_con%>
                                             </p>
@@ -245,8 +248,8 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script>
 var socket = io();
-var room_ID = '<%=room%>'
-var UserName = '<%=UserName%>'
+var room_ID = '<%=room%>';
+var UserName = "";
 color_code = '#FF0000';
 
 function change_color_code() {
@@ -287,9 +290,9 @@ sub_windows_click_last_time = '1000-01-01 00:00:00';
 
 function SendActionToSql(Sentcontent, ad) {
     var last_time;
-    if (sub_windows_click_last_time!='1000-01-01 00:00:00'){
+    if (sub_windows_click_last_time != '1000-01-01 00:00:00') {
         last_time = sub_windows_click_last_time.toLocaleString('zh-TW', { hour12: false });
-    }else{
+    } else {
         last_time = sub_windows_click_last_time;
     }
     $.post("./action", {
@@ -316,7 +319,19 @@ function SendActionToSql(Sentcontent, ad) {
 <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
 <script src="assets/js/material-kit.js" type="text/javascript"></script>
 <script type="text/javascript">
-$('#info').append('<p>使用者名稱: <%=UserName%></p>');
+$.get("./user/public_data", {
+        "mail":"<%=UserName%>"
+    },
+    function(data, status) {
+        References_list = JSON.parse(data);
+        console.log(References_list['text']);
+        UserName = References_list["return"][0]["name"];
+        $('#info').append('<p>使用者名稱: '+UserName+'</p>');
+
+    }
+);
+
+
 $().ready(function() {
     // the body of this function is in assets/materiial-kit.js
     materialKit.initSliders();
@@ -327,7 +342,7 @@ $().ready(function() {
 
         $(window).on('scroll', materialKitDemo_mini.checkScrollForParallax);
     }
-    
+
 
 });
 </script>
