reset the function of login to activity

--- a/system/views/argument/login.html
+++ b/system/views/argument/login.html
@@ -127,8 +127,8 @@
 							        <i class="fa fa-tag"></i>
 						        </span>
 						        <div class="form-group label-floating">
-	                                <label class="control-label">Activity ID</label>
-	                                <input type="text" name='a_id' class="form-control" />
+	                                <label class="control-label">Activity tag</label>
+	                                <input type="text" name='a_tag' class="form-control" />
                                 </div>
 					        </div>
 				        </div>
