--- a/system/views/Demo.html
+++ b/system/views/Demo.html
@@ -63,7 +63,7 @@
 				    </li>
 				    <li>
 					    <a rel="tooltip" title="About ours" data-placement="bottom" href="#" target="_blank" class="btn btn-white btn-simple btn-just-icon">
-						    <i class="fa fa-info-circle"></i><!--http://fontawesome.io/icons/-->
+						    <i class="fa fa-sign-out"></i><!--http://fontawesome.io/icons/-->
 					    </a>
 				    </li>
 				    <li>
