--- a/system/views/argument/newTopic.html
+++ b/system/views/argument/newTopic.html
@@ -56,11 +56,11 @@
                     </li>
                     <li>
                         <a rel="tooltip" title="About ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
-						    <i class="fa fa-info-circle"></i><!--http://fontawesome.io/icons/-->
+						    <i class="fa fa-sign-out"></i><!--http://fontawesome.io/icons/-->
 					    </a>
                     </li>
                     <li>
-                        <a rel="tooltip" title="Contact ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
+                        <a rel="tooltip" title="log-out" data-placement="bottom" href="./user/logout"  class="btn btn-white btn-simple btn-just-icon">
 						    <i class="fa fa-question-circle"></i>
 					    </a>
                     </li>
