--- a/system/views/argument/sitting_login.html
+++ b/system/views/argument/sitting_login.html
@@ -63,11 +63,11 @@
 				    </li>
 				    <li>
 					    <a rel="tooltip" title="About ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
-						    <i class="fa fa-info-circle"></i><!--http://fontawesome.io/icons/-->
+						    <i class="fa fa-sign-out"></i><!--http://fontawesome.io/icons/-->
 					    </a>
 				    </li>
 				    <li>
-					    <a rel="tooltip" title="Contact ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
+					    <a rel="tooltip" title="log-out" data-placement="bottom" href="./user/logout"  class="btn btn-white btn-simple btn-just-icon">
 						    <i class="fa fa-question-circle"></i>
 					    </a>
 				    </li>
@@ -102,19 +102,32 @@
 		<div class="section section-basic">
             
 	    	<div class="container">
-                <form action="./EnterHost" method="post">
+                <form action="./user/admin" method="get">
                     <div class="title">
 						<h2>Setting Login</h2>
 					</div>
                     <!--Input 1 : User id-->
-					<div class="col-sm-8">
+					<div class="col-sm-6">
 						<div class="input-group">
 							<span class="input-group-addon">
-								<i class="fa fa-user"></i>
+								<i class="fa fa-envelope-o"></i>
 							</span>
 							<div class="form-group label-floating">
-								<label class="control-label">User ID</label>
-								<input type="text" name='host_id' class="form-control" />
+								<label class="control-label">mail</label>
+								<input type="text" name='mail' class="form-control" />
+							</div>
+						</div>
+					</div>
+                    <!--/ Input 1 : User id-->
+                    <!--Input 1 : User id-->
+					<div class="col-sm-6">
+						<div class="input-group">
+							<span class="input-group-addon">
+								<i class="fa fa-key"></i>
+							</span>
+							<div class="form-group label-floating">
+								<label class="control-label">passwords</label>
+								<input type="password" name='pws' class="form-control" />
 							</div>
 						</div>
 					</div>
