--- a/system/views/argument/signup.html
+++ b/system/views/argument/signup.html
@@ -56,12 +56,12 @@
                     </li>
                     <li>
                         <a rel="tooltip" title="About ours" data-placement="bottom" href="http://ytwu.lst.ncu.edu.tw/wu/ch/" target="_blank" class="btn btn-white btn-simple btn-just-icon">
-                            <i class="fa fa-sign-out"></i><!--http://fontawesome.io/icons/-->
+                            <i class="fa fa-info-circle"></i><!--http://fontawesome.io/icons/-->
                         </a>
                     </li>
                     <li>
                         <a rel="tooltip" title="log-out" data-placement="bottom" href="./user/logout"  class="btn btn-white btn-simple btn-just-icon">
-                            <i class="fa fa-question-circle"></i>
+                            <i class="fa fa-sign-out"></i>
                         </a>
                     </li>
                     <li>
