--- a/system/views/argument/sittingPage.html
+++ b/system/views/argument/sittingPage.html
@@ -169,6 +169,12 @@
                                                     新增題目
                                                 </a>
                                         </li>
+                                        <li>
+                                            <a href="#front-test" data-toggle="tab">
+                                                    <i class="material-icons">library_add</i>
+                                                    新增front test
+                                                </a>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -199,6 +205,12 @@
                                     <p>新增論證題目，這些題目可以重複使用(舉辦多場活動)，但每次活動主題只能從中選一。</p>
                                     <div class="col-md-8 col-md-offset-2">
                                         <button class="btn btn-danger" onclick="javascript:location.href='./newTopic'">新增題目</button>
+                                    </div>
+                                </div>
+                                <div class="tab-pane" id="front-test">
+                                    <p>....</p>
+                                    <div class="col-md-8 col-md-offset-2">
+                                        <button class="btn btn-danger" onclick="javascript:location.href='./newassessment'">newassessment</button>
                                     </div>
                                 </div>
                             </div>
